2016-07-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.0 released.

2016-07-07  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.8.20 released.

2016-07-07  c.hetherington  <cth@carlh.net>

	* Fix incorrect job running time reports (#912).

2016-07-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.19 released.

2016-07-05  c.hetherington  <cth@carlh.net>

	* Fix stay-on-top behaviour of audio/video graphs
	to only stay on top of other DCP-o-matic windows (#909).

2016-07-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.18 released.

2016-07-04  c.hetherington  <cth@carlh.net>

	* Fix several bugs with the sensitivity
	of controls in various circumstances.

2016-07-04  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-07-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.17 released.

2016-07-03  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix line spacing adjustment of SSA/ASS.

	* Fix underline support in SSA/ASS.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.16 released.

2016-07-02  Carl Hetherington  <cth@carlh.net>

	* Fix problems with markup in subrip/SSA/ASS.

	* Updated ru_RU translation from Igor Voytovich.

	* Updated uk_UA translation from Igor Voytovich.

	* Version 2.8.15 released.

2016-07-01  Carl Hetherington  <cth@carlh.net>

	* Add move-to-position dialogs when clicking on the preview timecode
	or frame number.

2016-06-29  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Increase frequency of progress reporting on long
	encodes (#900).

	* Obey specified colour conversion when previewing
	RGB and XYZ JPEG2000 files.

2016-06-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.14 released.
